# NBA_predictor

./: .gitignore  data_preparation.py  exploring.ipynb  nba_scrapper.py  player_stats.csv  players.csv  pyproject.toml
.ipynb_checkpoints/: exploring-checkpoint.ipynb
data/: Victor_Wembanyama_Profile.csv
lib/: core.py  visualize.py
