[tool.poetry]
name = "nba-predictor"
version = "0.1.0"
description = ""
authors = ["Fabien Delahousse <fabien.delahousse@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.5.1"
pandas = "^2.2.3"
tabulate = "^0.9.0"
matplotlib = "^3.10.0"
pyarrow = "^18.1.0"
numpy = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
